[gd_scene load_steps=3 format=2]

[ext_resource path="res://Trains/Modules/SifaModule.gd" type="Script" id=1]
[ext_resource path="res://Resources/Basic/Sounds/SiFa.ogg" type="AudioStream" id=2]

[node name="Sifa" type="Node"]
script = ExtResource( 1 )

[node name="SifaTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="WarningTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="SifaSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="SifaTimer" to="." method="_on_SifaTimer_timeout"]
